@@ -697,6 +697,8 @@ Possible predicate properties values are:
 	<li><code>non_terminal(NonTerminal//Arity)</code></li>
 	<li><code>alias_of(Predicate)</code></li>
 	<li><code>synchronized</code></li>
+	<li><code>mode(Mode, Solutions)</code></li>
+	<li><code>info(ListOfPairs)</code></li>
 </ul>
 <p>
 The properties <code>logtalk</code> and <code>prolog</code> allows us to distinguish between predicates defined by Logtalk and predicates defined by the back-end Prolog compiler.
